# bluetooth-bridge

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  config.json  vcpkg-configuration.json  vcpkg.json
cmake/: config.cmake
src/lib/: CMakeLists.txt  defines.h  version.h.in
src/lib/bluetooth/: adapter.h  agent.cpp  agent.h  agent_manager.h  bluetooth_manager.cpp  bluetooth_manager.h  device.h  profile.cpp  profile.h  profile_manager.h  utils.cpp  utils.h
src/lib/bluetooth/object/: agent_adaptor.h  profile_adaptor.h
src/lib/bluetooth/proxy/: adapter_proxy.h  agent_manager_proxy.h  device_proxy.h  profile_manager_proxy.h
src/lib/bluetooth/rfcomm/: client.cpp  client.h  sdp.cpp  sdp.h  server.cpp  server.h
src/lib/mqtt/: job.cpp  job.h  mqtt_client.cpp  mqtt_client.h  mqtt_proxy.cpp  mqtt_proxy.h
src/lib/utils/: base64.cpp  base64.h  config.cpp  config.h  logger.cpp  logger.h
